force-app/main/default/objects/Krow__Contract_Line__c/Krow__Contract_Line__c.object-meta.xml
<CustomObject>
    <label>Contract Line</label>
    <nameField>
        <displayFormat>CL{00000000}</displayFormat>
        <label>Contract Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>