force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Add_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Krow__Add_to_Budget__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Add to Budget</label>
    <type>Checkbox</type>
</CustomField>