force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Budgeted_Cost__c</fullName>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>