force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Contract__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Krow__Contract__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>