force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Contract_Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contract_Line_End_Date__c</fullName>
    <label>Contract Line End Date</label>
    <type>Date</type>
</CustomField>