force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Hours__c</fullName>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>