force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Invoiced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoiced_Amount__c</fullName>
    <label>Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>