force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__PO_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Krow__Purchase_Order__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>