force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Krow__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>