force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Product__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>