force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project__c.Krow__Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Krow__Project__c.Krow__Project_Template__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>