force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Project_Billing__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Billing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project_Billing__c.Krow__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Krow__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project_Billing__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>