force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Recognized_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Recognized_To_Date__c</fullName>
    <label>Recognized To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>