force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Revenue_Template__c.field-meta.xml
<CustomField>
    <fullName>Krow__Revenue_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Template</label>
    <referenceTo>Krow__Revenue_Template__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>