force-app/main/default/objects/Krow__Contract_Line__c/fields/Krow__Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>